--------------------

.. contents::


IN DEVELOPMENT
--------------

  NOTES WHEN UPGRADING:

  CHANGES:

    * Broader support of GNU Emacs mail clients. Set
      ``mail_client=emacsclient`` in your bazaar.conf and ``send`` will pop the
      bundle in a mail buffer according to the value of ``mail-user-agent``
      variable. (Xavier Maillard)

  FEATURES:

  IMPROVEMENTS:

  BUGFIXES:

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

  INTERNALS:

  API BREAKS:


bzr 1.4rc1 2008-04-11
---------------------

   * bzr main script cannot be imported (Benjamin Peterson)

   * On Linux bzr additionally looks for plugins in arch-independent site
     directory. (Toshio Kuratomi)

   * The ``set_rh`` branch hook is now deprecated. Please migrate
     any plugins using this hook to use an alternative, e.g.
     ``post_change_branch_tip``. (Ian Clatworthy)

   * When a plugin cannot be loaded as the file path is not a valid
     python module name bzr will now strip a ``bzr_`` prefix from the
     front of the suggested name, as many plugins (e.g. bzr-svn)
     want to be installed without this prefix. It is a common mistake
     to have a folder named "bzr-svn" for that plugin, especially
     as this is what bzr branch lp:bzr-svn will give you. (James Westby,
     Andrew Cowie)

   * UniqueIntegerBugTracker now appends bug-ids instead of joining
     them to the base URL. Plugins that register bug trackers may
     need a trailing / added to the base URL if one is not already there.
     (James Wesby, Andrew Cowie)

  FEATURES:

    * Added start_commit hook for mutable trees. (Jelmer Vernooij, #186422)

    * ``status`` now accepts ``--no-pending`` to show the status without
      listing pending merges, which speeds up the command a lot on large
      histories.  (James Westby, #202830)

    * New ``post_change_branch_tip`` hook that is called after the